@@ -572,254 +572,10 @@ function _trustedBird_MultiLDAP_Upgrade_AccountSettings() {
 }
 
 /**
- * getProxyOnUIThread
- *
- * @param aObject
- * @param aInterface
- * @return Proxy for aObject
- */
-function trustedBird_getProxyOnUIThread(aObject, aInterface) {
-    var mainThread;
-    try {
-        mainThread = Components.classes["@mozilla.org/thread-manager;1"].getService().mainThread;
-    } catch (e) {
-        var eventQSvc = Components.classes["@mozilla.org/event-queue-service;1"].getService(Components.interfaces.nsIEventQueueService);
-        mainThread = eventQSvc.getSpecialEventQueue(Components.interfaces.nsIEventQueueService.UI_THREAD_EVENT_QUEUE);
-    }
-
-    var proxyMgr = Components.classes["@mozilla.org/xpcomproxy;1"].getService(Components.interfaces.nsIProxyObjectManager);
-
-    return proxyMgr.getProxyForObject(mainThread, aInterface, aObject, 5); // 5 == PROXY_ALWAYS | PROXY_SYNC
-}
-
-/**
  * Get Mozilla platform version
  *
  * @return Platform version
  */
 function trustedBird_getPlatformVersion() {
     return Components.classes["@mozilla.org/xre/app-info;1"].getService(Components.interfaces.nsIXULAppInfo).platformVersion;
-}
-
-/**
- * LDAP query object
- */
-function trustedBird_ldapQuery() {
-    this.ldapURL = null;
-    this.ldapConnection = null;
-    this.ldapOperation = null;
-    this.ldapEndCallback = null;
-    this.ldapEndCallbackParameter = null;
-    this.ldapMessageCallback = null;
-    this.ldapMessageCallbackParameter = null;
-    this.error = trustedBird_ldapQuery.DATA_ERROR;
-}
-
-/* Error codes */
-trustedBird_ldapQuery.NO_ERROR = 0;
-trustedBird_ldapQuery.CONNECT_ERROR = 1;
-trustedBird_ldapQuery.SEARCH_ERROR = 2;
-trustedBird_ldapQuery.DATA_ERROR = 3;
-
-/**
- * Launch a LDAP query
- *
- * @param aLdapUri LDAP URI
- * @param aLdapEndCallback Callback function to handle end of query (error, aLdapEndCallbackParameter)
- * @param aLdapEndCallbackParameter
- * @param aLdapMessageCallback Callback function to handle LDAP response (nsILDAPURL, nsILDAPMessage, aLdapMessageCallbackParameter, return true if received data is correct)
- * @param aLdapMessageCallbackParameter
- * @return True if query has been successfully launched
- */
-trustedBird_ldapQuery.prototype.launch = function(aLdapUri, aLdapEndCallback, aLdapEndCallbackParameter, aLdapMessageCallback, aLdapMessageCallbackParameter) {
-    this.ldapEndCallback = aLdapEndCallback;
-    this.ldapEndCallbackParameter = aLdapEndCallbackParameter;
-    this.ldapMessageCallback = aLdapMessageCallback;
-    this.ldapMessageCallbackParameter = aLdapMessageCallbackParameter;
-
-    try {
-        if (trustedBird_getPlatformVersion() >= "1.9") {
-            this.ldapURL = Components.classes["@mozilla.org/network/io-service;1"].getService(Components.interfaces.nsIIOService).newURI(aLdapUri, null, null).QueryInterface(Components.interfaces.nsILDAPURL);
-        } else {
-            this.ldapURL = Components.classes["@mozilla.org/network/ldap-url;1"].createInstance().QueryInterface(Components.interfaces.nsILDAPURL);
-            this.ldapURL.spec = aLdapUri;
-        }
-    } catch (e) {
-        trustedBird_dump("Error trustedBird_ldapQuery.launch incorrect URI:" + e);
-        return false;
-    }
-
-    try {
-        this.ldapConnection = Components.classes["@mozilla.org/network/ldap-connection;1"].createInstance().QueryInterface(Components.interfaces.nsILDAPConnection);
-
-        if (trustedBird_getPlatformVersion() >= "1.9") {
-            this.ldapConnection.init(this.ldapURL, null, trustedBird_getProxyOnUIThread(this, Components.interfaces.nsILDAPMessageListener), null, Components.interfaces.nsILDAPConnection.VERSION3);
-        } else {
-            this.ldapConnection.init(this.ldapURL.asciiHost, this.ldapURL.port, this.ldapURL.options & this.ldapURL.OPT_SECURE, null, trustedBird_getProxyOnUIThread(this, Components.interfaces.nsILDAPMessageListener), null, Components.interfaces.nsILDAPConnection.VERSION3);
-        }
-    } catch (e) {
-        trustedBird_dump("Error trustedBird_ldapQuery.launch: " + e);
-        return false;
-    }
-
-    return true;
-}
-
-/**
- * Launch bind operation
- */
-trustedBird_ldapQuery.prototype.bind = function() {
-    if (this.ldapConnection == null)
-        return;
-
-    try {
-        this.ldapOperation = Components.classes["@mozilla.org/network/ldap-operation;1"].createInstance().QueryInterface(Components.interfaces.nsILDAPOperation);
-
-        this.ldapOperation.init(this.ldapConnection, trustedBird_getProxyOnUIThread(this, Components.interfaces.nsILDAPMessageListener), null);
-
-        this.ldapOperation.simpleBind("");
-        return true;
-    } catch (e) {
-        trustedBird_dump("Error trustedBird_ldapQuery.search: " + e);
-    }
-
-    return false;
-}
-
-/**
- * Launch search operation
- */
-trustedBird_ldapQuery.prototype.search = function() {
-    if (this.ldapConnection == null)
-        return false;
-
-    try {
-        var nbAttributes = new Object;
-
-        delete this.ldapOperation;
-        this.ldapOperation = Components.classes["@mozilla.org/network/ldap-operation;1"].createInstance().QueryInterface(Components.interfaces.nsILDAPOperation);
-
-        this.ldapOperation.init(this.ldapConnection, trustedBird_getProxyOnUIThread(this, Components.interfaces.nsILDAPMessageListener), null);
-
-        this.ldapOperation.searchExt(this.ldapURL.dn, this.ldapURL.scope, this.ldapURL.filter, 0, this.ldapURL.getAttributes(new Object), 0, 0);
-
-        return true;
-    } catch (e) {
-        trustedBird_dump("Error trustedBird_ldapQuery.search: " + e);
-    }
-
-    return false;
-}
-
-trustedBird_ldapQuery.prototype.QueryInterface = function(iid) {
-    if (iid.equals(Components.interfaces.nsISupports) || iid.equals(Components.interfaces.nsILDAPMessageListener))
-        return this;
-
-    Components.returnCode = Components.results.NS_ERROR_NO_INTERFACE;
-    return null;
-}
-
-trustedBird_ldapQuery.prototype.onLDAPInit = function(aConnection, aStatus) {
-    if (this.bind())
-        return;
-
-    if (this.ldapEndCallback)
-        this.ldapEndCallback(trustedBird_ldapQuery.CONNECT_ERROR, this.ldapEndCallbackParameter);
-}
-
-trustedBird_ldapQuery.prototype.onLDAPMessage = function(aMessage) {
-    switch (aMessage.type) {
-        case Components.interfaces.nsILDAPMessage.RES_BIND:
-            trustedBird_dump("trustedBird_ldapMessageListener.onLDAPMessage: RES_BIND");
-            if (aMessage.errorCode == Components.interfaces.nsILDAPErrors.SUCCESS) {
-                if (this.search())
-                    return;
-            } else {
-                trustedBird_dump("Error trustedBird_ldapMessageListener.onLDAPMessage RES_BIND: (" + aMessage.errorCode + ") " + aMessage.errorMessage);
-            }
-            if (this.ldapEndCallback)
-                this.ldapEndCallback(trustedBird_ldapQuery.SEARCH_ERROR, this.ldapEndCallbackParameter);
-            return;
-            break;
-
-        case Components.interfaces.nsILDAPMessage.RES_SEARCH_ENTRY:
-            trustedBird_dump("trustedBird_ldapMessageListener.onLDAPMessage: RES_SEARCH_ENTRY");
-            if (aMessage.errorCode == Components.interfaces.nsILDAPErrors.SUCCESS) {
-                if (!this.ldapMessageCallback || this.ldapMessageCallback(this.ldapURL, aMessage, this.ldapMessageCallbackParameter)) {
-                    this.error = trustedBird_ldapQuery.NO_ERROR;
-                }
-                return;
-            } else {
-                trustedBird_dump("Error trustedBird_ldapMessageListener.onLDAPMessage RES_SEARCH_ENTRY: (" + aMessage.errorCode + ") " + aMessage.errorMessage);
-            }
-            break;
-
-        case Components.interfaces.nsILDAPMessage.RES_SEARCH_RESULT:
-            trustedBird_dump("trustedBird_ldapMessageListener.onLDAPMessage: RES_SEARCH_RESULT");
-            break;
-    }
-
-    if (this.ldapEndCallback)
-        this.ldapEndCallback(this.error, this.ldapEndCallbackParameter);
-}
-
-/*
- * Base64
- */
-
-/**
- * Encode an array of bytes into base64
- *
- * @param arrayBytes Array of bytes to encode
- * @return Base64 encoded string
- */
-function trustedBird_base64encode(arrayBytes) {
-    const
-            B64_CHARS = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/";
-    var out = "", bits;
-
-    while (arrayBytes.length >= 3) {
-        bits = 0;
-        for (var i = 0; i < 3; i++) {
-            bits <<= 8;
-            bits |= arrayBytes[i];
-        }
-        for (var i = 18; i >= 0; i -= 6)
-            out += B64_CHARS[(bits >> i) & 0x3F];
-        arrayBytes.splice(0, 3);
-    }
-
-    if (arrayBytes.length == 2) {
-        out += B64_CHARS[(arrayBytes[0] >> 2) & 0x3F];
-        out += B64_CHARS[((arrayBytes[0] & 0x03) << 4) | ((arrayBytes[1] >> 4) & 0x0F)];
-        out += B64_CHARS[((arrayBytes[1] & 0x0F) << 2)];
-        out += "=";
-    } else if (arrayBytes.length == 1) {
-        out += B64_CHARS[(arrayBytes[0] >> 2) & 0x3F];
-        out += B64_CHARS[(arrayBytes[0] & 0x03) << 4];
-        out += "==";
-    }
-
-    return out;
-}
-
-/*
- * nsIMsgFolder
- */
-
-/* From /mail/base/content/widgetglue.js */
-function trustedBird_GetMsgFolderFromUri(uri, checkFolderAttributes) {
-    var msgfolder = null;
-    try {
-        var rdfService = Components.classes['@mozilla.org/rdf/rdf-service;1'].getService(Components.interfaces.nsIRDFService);
-        var resource = rdfService.GetResource(uri);
-        msgfolder = resource.QueryInterface(Components.interfaces.nsIMsgFolder);
-        if (checkFolderAttributes) {
-            if (!(msgfolder && (msgfolder.parent || msgfolder.isServer))) {
-                msgfolder = null;
-            }
-        }
-    } catch (ex) {
-    }
-    return msgfolder;
 }
